# stock-viewer-backend

./: Dockerfile  Makefile  pyproject.toml
app/: main.py
app/api/: markets.py
app/schemas/: data.py  errors.py
app/services/: market_service.py
